--- a/etsy-app/src/index.html
+++ b/etsy-app/src/index.html
@@ -1,14 +1,32 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>EtsyApp</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <head>
+    <meta charset="utf-8">
+    <title>Etsy</title>
+    <base href="">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
+
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div class="loading-container">
+      <div class="flex">
+        <div class="loader">
+          <img src="assets/images/puff.svg" width="50">
+        </div>
+      </div>
+      <div class="load-text">
+        Loading...
+      </div>
+    </div>
+
+  </app-root>
 </body>
+
 </html>
